<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_call_log"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="helper.develop.android.androiddevelophelper.insertcalllog.InsertCallLogActivity">

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/insert_call_log_num"
        />

    <EditText
        android:id="@+id/number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/numberTextView"
        android:layout_alignBottom="@id/numberTextView"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/callTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/call_log_type"
        android:layout_below="@id/numberTextView"
        />

    <RadioGroup
        android:id="@+id/call_log_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/callTypeTextView">
        <RadioButton
            android:id="@+id/outcall"
            android:text="@string/type_out"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/incall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_in"/>
    </RadioGroup>

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/call_log_type"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/phone_number"
        />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phoneNumberTextView"
        android:layout_alignBottom="@id/phoneNumberTextView"
        android:inputType="number"
        />


    <Button
        android:id="@+id/insertCallLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberEditText"
        android:background="@drawable/button_click"
        android:text="@string/insert_call_log" />

</RelativeLayout>