<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_top_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="helper.develop.android.androiddevelophelper.topactivityinfo.ShowTopActivityInfoActivity">

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_top_activity"
        android:textColor="@color/colorAccent"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:text="@string/isShowTopActivity"/>

    <TextView
        android:id="@+id/hint_editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_below="@id/checkbox"
        android:text="@string/top_activity_time_lapse" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/hint_top_activity_time_lapse"
        android:layout_below="@id/checkbox"
        android:layout_toRightOf="@id/hint_editText"
        android:inputType="number"
        android:maxLength="3"/>
</RelativeLayout>
