<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="helper.develop.android.androiddevelophelper.insertcontacts.InsertContactsActivity">
    <TextView
        android:id="@+id/numberContacts"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/insert_contacts_num"
        />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/numberContacts"
        android:layout_alignBottom="@id/numberContacts"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/contactsNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/numberEditText"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/contacts_num"
        />

    <EditText
        android:id="@+id/contactsNumberEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/contactsNumberTextView"
        android:layout_alignBottom="@id/contactsNumberTextView"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/contactsNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/contactsNumberTextView"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/insert_contacts_name"
        />

    <EditText
        android:id="@+id/contactsNameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/contactsNameTextView"
        android:layout_alignBottom="@id/contactsNameTextView"
        />

    <Button
        android:id="@+id/insertContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_click"
        android:layout_below="@id/contactsNameTextView"
        android:text="@string/insert_contacts" />
</RelativeLayout>
